# sjcam

./: CMakeLists.txt  dcp-commands.txt
cmake/: FindCFITSIO.cmake  FindDcpClient.cmake  FindProsilica.cmake
misc/: .gitignore  cameras.txt  dcp-commands.txt
misc/config/: gsjc1.ini  gsjc2.ini  gsjcgui1.ini  gsjcgui2.ini  sjcserver-gsjc1.ini  sjcserver-gsjc2.ini
misc/desktop/: gsjc1.desktop  gsjc2.desktop
misc/scripts/: gsjc-copy  gsjc-server  gsjc1-copy  gsjc2-copy  sjcam-copy.py
misc/scripts/bash/: gsjc1-compress.sh  gsjc1-copy.sh  gsjc2-compress.sh  gsjc2-copy.sh
misc/scripts/centos-init/: gsjc1  gsjc1-copy  gsjc2  gsjc2-copy
src/: CMakeLists.txt  sjcdata.h  version.h.in
src/client/: CMakeLists.txt  cameradock.cpp  cameradock.h  cmdlineopts.cpp  cmdlineopts.h  histogramdock.cpp  histogramdock.h  recordingdock.cpp  recordingdock.h  sjcclient.cpp  sjcclient.h  sjcclient.ui  sjcclient_main.cpp
src/client/CamSys/: ColorBar.cpp  ColorBar.h  ColorRange.cpp  ColorRange.h  ColorTable.cpp  ColorTable.h  Histogram.cpp  Histogram.h  HistogramWidget.cpp  HistogramWidget.h  Image.cpp  Image.h  ImageRenderer.cpp  ImageRenderer.h  ImageScrollArea.cpp  ImageScrollArea.h  ImageWidget.cpp  ImageWidget.h
src/client/ui/: cameradock.ui  histogramdock.ui  recordingdock.ui  sjcclient.qrc  sjcclient.rc  sjcclient.ui
src/server/: CMakeLists.txt  camera.cpp  camera.h  cmdlineoptions.cpp  cmdlineoptions.h  cmdlineopts.cpp  cmdlineopts.h  imagestreamer.cpp  imagestreamer.h  imagewriter.cpp  imagewriter.h  pvutils.cpp  pvutils.h  recorder.cpp  recorder.h  sjcserver.cpp  sjcserver.h  sjcserver_main.cpp
src/starter/: CMakeLists.txt  clientstarter.cpp
